--- a/ide/lazarus.lpi
+++ b/ide/lazarus.lpi
@@ -23,7 +23,7 @@
     <VersionInfo>
       <UseVersionInfo Value="True"/>
       <MajorVersionNr Value="4"/>
-      <BuildNr Value="4"/>
+      <MinorVersionNr Value="1"/>
       <CharSet Value="04B0"/>
       <StringTable ProductName="Lazarus IDE"/>
     </VersionInfo>
