--- a/tools/chmmaker/chmmaker.lpi
+++ b/tools/chmmaker/chmmaker.lpi
@@ -14,7 +14,15 @@
       <XPManifest>
         <DpiAware Value="True"/>
       </XPManifest>
+      <Icon Value="0"/>
     </General>
+    <VersionInfo>
+      <UseVersionInfo Value="True"/>
+      <AutoIncrementBuild Value="True"/>
+      <MajorVersionNr Value="4"/>
+      <MinorVersionNr Value="1"/>
+      <StringTable OriginalFilename="chmmaker" ProductName="CHMMaker"/>
+    </VersionInfo>
     <BuildModes Count="1">
       <Item1 Name="default" Default="True"/>
     </BuildModes>
@@ -39,7 +47,7 @@
         <MinVersion Major="1" Valid="True"/>
       </Item3>
     </RequiredPackages>
-    <Units Count="3">
+    <Units Count="4">
       <Unit0>
         <Filename Value="chmmaker.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -60,6 +68,14 @@
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="CHMSiteMapEditor"/>
       </Unit2>
+      <Unit3>
+        <Filename Value="chmabout.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="AboutForm"/>
+        <HasResources Value="True"/>
+        <ResourceBaseClass Value="Form"/>
+        <UnitName Value="chmAbout"/>
+      </Unit3>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
