CHMMaker: added missing .lrj files, updated caption ignore list

--- a/tools/chmmaker/chmmaker.lpi
+++ b/tools/chmmaker/chmmaker.lpi
@@ -19,55 +19,57 @@
     <i18n>
       <EnableI18N Value="True"/>
       <OutDir Value="languages"/>
-      <ExcludedIdentifiers Count="48">
-        <Item1 Value="tsitemapeditform.urllabel.caption"/>
-        <Item2 Value="tsitemapeditform.subitembtn.caption"/>
-        <Item3 Value="tsitemapeditform.afterbtn.caption"/>
-        <Item4 Value="tsitemapeditform.beforebtn.caption"/>
-        <Item5 Value="tsitemapeditform.savebtn.caption"/>
-        <Item6 Value="tsitemapeditform.cancelbtn.caption"/>
-        <Item7 Value="tsitemapeditform.deletebtn.caption"/>
-        <Item8 Value="tsitemapeditform.additemlabel.caption"/>
-        <Item9 Value="tsitemapeditform.descriptionlabel.caption"/>
-        <Item10 Value="tsitemapeditform.locallinklabel.caption"/>
-        <Item11 Value="tsitemapeditform.fontlabel.caption"/>
-        <Item12 Value="tsitemapeditform.sitemapgroupbox.caption"/>
-        <Item13 Value="tsitemapeditform.globalpropertiesgroupbox.caption"/>
-        <Item14 Value="tsitemapeditform.backgroundcolorlabel.caption"/>
-        <Item15 Value="tsitemapeditform.foregroundcolorlabel.caption"/>
-        <Item16 Value="tsitemapeditform.descfromtitlebtn.caption"/>
-        <Item17 Value="tsitemapeditform.folderviewcheck.caption"/>
-        <Item18 Value="taboutform.lbland.caption"/>
-        <Item19 Value="taboutform.lbloperatingsystem.caption"/>
-        <Item20 Value="taboutform.lbltargetcpu.caption"/>
-        <Item21 Value="taboutform.lbltargetos.caption"/>
-        <Item22 Value="taboutform.lblversion.caption"/>
-        <Item23 Value="taboutform.infooperatingsystem.caption"/>
-        <Item24 Value="taboutform.infotargetcpu.caption"/>
-        <Item25 Value="taboutform.infotargetos.caption"/>
-        <Item26 Value="taboutform.infotargetplatform.caption"/>
-        <Item27 Value="taboutform.infoversion.caption"/>
-        <Item28 Value="taboutform.closebtn.caption"/>
-        <Item29 Value="taboutform.caption"/>
-        <Item30 Value="taboutform.lblcreatedwith.caption"/>
-        <Item31 Value="taboutform.lbland.caption"/>
-        <Item32 Value="taboutform.lblfreepascal.caption"/>
-        <Item33 Value="taboutform.lblfreepascal.hint"/>
-        <Item34 Value="taboutform.lbllazarus.caption"/>
-        <Item35 Value="taboutform.lbllazarus.hint"/>
-        <Item36 Value="tchmform.acnew.caption"/>
-        <Item37 Value="tchmform.acopen.caption"/>
-        <Item38 Value="tchmform.acsave.caption"/>
-        <Item39 Value="tchmform.acsaveas.caption"/>
-        <Item40 Value="tchmform.acclose.caption"/>
-        <Item41 Value="tchmform.acquit.caption"/>
-        <Item42 Value="tchmform.accompile.caption"/>
-        <Item43 Value="tchmform.accompileandview.caption"/>
-        <Item44 Value="tchmform.acabout.caption"/>
-        <Item45 Value="tchmform.compileandview.caption"/>
-        <Item46 Value="tchmform.toceditbtn.caption"/>
-        <Item47 Value="tchmform.indexeditbtn.caption"/>
-        <Item48 Value="tchmform.filesgroupbox.caption"/>
+      <ExcludedIdentifiers Count="50">
+        <Item1 Value="tsitemapeditform.caption"/>
+        <Item2 Value="tsitemapeditform.urllabel.caption"/>
+        <Item3 Value="tsitemapeditform.subitembtn.caption"/>
+        <Item4 Value="tsitemapeditform.afterbtn.caption"/>
+        <Item5 Value="tsitemapeditform.beforebtn.caption"/>
+        <Item6 Value="tsitemapeditform.savebtn.caption"/>
+        <Item7 Value="tsitemapeditform.cancelbtn.caption"/>
+        <Item8 Value="tsitemapeditform.deletebtn.caption"/>
+        <Item9 Value="tsitemapeditform.additemlabel.caption"/>
+        <Item10 Value="tsitemapeditform.descriptionlabel.caption"/>
+        <Item11 Value="tsitemapeditform.locallinklabel.caption"/>
+        <Item12 Value="tsitemapeditform.fontlabel.caption"/>
+        <Item13 Value="tsitemapeditform.sitemapgroupbox.caption"/>
+        <Item14 Value="tsitemapeditform.globalpropertiesgroupbox.caption"/>
+        <Item15 Value="tsitemapeditform.backgroundcolorlabel.caption"/>
+        <Item16 Value="tsitemapeditform.foregroundcolorlabel.caption"/>
+        <Item17 Value="tsitemapeditform.descfromtitlebtn.caption"/>
+        <Item18 Value="tsitemapeditform.folderviewcheck.caption"/>
+        <Item19 Value="taboutform.lbland.caption"/>
+        <Item20 Value="taboutform.lbloperatingsystem.caption"/>
+        <Item21 Value="taboutform.lbltargetcpu.caption"/>
+        <Item22 Value="taboutform.lbltargetos.caption"/>
+        <Item23 Value="taboutform.lblversion.caption"/>
+        <Item24 Value="taboutform.infooperatingsystem.caption"/>
+        <Item25 Value="taboutform.infotargetcpu.caption"/>
+        <Item26 Value="taboutform.infotargetos.caption"/>
+        <Item27 Value="taboutform.infotargetplatform.caption"/>
+        <Item28 Value="taboutform.infoversion.caption"/>
+        <Item29 Value="taboutform.closebtn.caption"/>
+        <Item30 Value="taboutform.caption"/>
+        <Item31 Value="taboutform.lblcreatedwith.caption"/>
+        <Item32 Value="taboutform.lbland.caption"/>
+        <Item33 Value="taboutform.lblfreepascal.caption"/>
+        <Item34 Value="taboutform.lblfreepascal.hint"/>
+        <Item35 Value="taboutform.lbllazarus.caption"/>
+        <Item36 Value="taboutform.lbllazarus.hint"/>
+        <Item37 Value="taboutform.lbltargetplatform.Caption"/>
+        <Item38 Value="tchmform.acnew.caption"/>
+        <Item39 Value="tchmform.acopen.caption"/>
+        <Item40 Value="tchmform.acsave.caption"/>
+        <Item41 Value="tchmform.acsaveas.caption"/>
+        <Item42 Value="tchmform.acclose.caption"/>
+        <Item43 Value="tchmform.acquit.caption"/>
+        <Item44 Value="tchmform.accompile.caption"/>
+        <Item45 Value="tchmform.accompileandview.caption"/>
+        <Item46 Value="tchmform.acabout.caption"/>
+        <Item47 Value="tchmform.compileandview.caption"/>
+        <Item48 Value="tchmform.toceditbtn.caption"/>
+        <Item49 Value="tchmform.indexeditbtn.caption"/>
+        <Item50 Value="tchmform.filesgroupbox.caption"/>
       </ExcludedIdentifiers>
     </i18n>
     <VersionInfo>
