--- a/components/debuggerintf/Makefile.fpc
+++ b/components/debuggerintf/Makefile.fpc
@@ -2,7 +2,7 @@
 #
 #   Makefile.fpc for DebuggerIntf 0.1
 #
-#   This file was generated on 3-9-23
+#   This file was generated on 06/24/2025
 
 [package]
 name=debuggerintf
@@ -10,8 +10,8 @@ version=0.1
 
 [compiler]
 unittargetdir=lib/$(CPU_TARGET)-$(OS_TARGET)
-unitdir=. ../../packager/units/$(CPU_TARGET)-$(OS_TARGET) ../lazdebuggers/lazdebuggerintf/lib/$(CPU_TARGET)-$(OS_TARGET) ../lazutils/lib/$(CPU_TARGET)-$(OS_TARGET)
-options=-MObjFPC -Scghi -O1 -g -gl -l -venibq -vw-h- -vm4046 $(DBG_OPTIONS)
+unitdir=. fcl-proc331 ../../packager/units/$(CPU_TARGET)-$(OS_TARGET) ../lazdebuggers/lazdebuggerintf/lib/$(CPU_TARGET)-$(OS_TARGET) ../lazutils/lib/$(CPU_TARGET)-$(OS_TARGET)
+options=-MObjFPC -Scghi -O1 -g -gl -l -venibq -vw-h- -vm4046 -dVerboseFindReferences $(DBG_OPTIONS)
 
 [target]
 units=debuggerintf.pas
